--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,8 @@ source:
 build:
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
   number: 0
-  skip: true  # [py<35]
+  # s390x is missing streamlit
+  skip: true  # [py<35 or s390x]
 
 requirements:
   host:
